--- a/Task_Tracker/package.json
+++ b/Task_Tracker/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "@mui/x-date-pickers": "^6.18.1",
     "dayjs": "^1.11.10",
@@ -19,7 +20,8 @@
     "npm": "^10.2.4",
     "react": "^18.2.0",
     "react-calendar": "^4.6.1",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
